--- a/q.4
+++ b/q.4
@@ -2,7 +2,7 @@
 #include<stdio.h>
 int main()
 {
-  int x,y,z,gt,avg,a,b,c;
+  int avg,a,b,c;
   printf("please enter your marks in three subjects respectively (between 1-10) :- ");
   scanf("%d%d%d",&a,&b,&c);
   if((a>=5)&&(b>=5)&&(c>=5))
